<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class ClinicalImage extends Model
{
    use HasFactory;

    protected $fillable = [
        'user_id',
        'title',
        'description',
        'before_image',
        'after_image',
    ];

     /* Relaciones */
    
    public function user()
    {
        return $this->belongsTo(User::class);
    }
}
