---
title: Database ERD
---
erDiagram
    direction LR
    PATIENTS ||--o{ MEDICAL_EVALUATIONS : "patient_id"
    PATIENTS ||--o{ PROCEDURES : "patient_id"
    PROCEDURES ||--o{ PROCEDURE_ITEMS : "procedure_id"
    USERS ||--o{ CLINICAL_IMAGES : "user_id"
    USERS ||--o{ MEDICAL_EVALUATIONS : "user_id"
    USERS ||--o{ PATIENTS : "user_id"
    USERS ||--o{ PROCEDURES : "user_id"

    CACHE {
        int expiration
        string key
    }

    CACHE_LOCKS {
        int expiration
        string key
        string owner
    }

    CLINICAL_IMAGES {
        bigint id PK
        ```mermaid
        ---
        title: Database ERD (Cold Esthetic)
        ---
        erDiagram

            USERS {
                int user_id PK
                string first_name
                string last_name
                string email
                string password
                string cellphone
                string brand_name
                string brand_slug
            }

            PATIENTS {
                int patient_id PK
                int user_id FK
                string referrer_name
                string first_name
                string last_name
                string cellphone
                int age
                float weight
                float height
                float bmi
                string medical_background
                string biological_sex
            }

            PROCEDURES {
                int procedure_id PK
                int user_id FK
                int patient_id FK
                string brand_slug
                date procedure_date
                decimal total_amount
                text notes
            }

            PROCEDURE_ITEMS {
                int id_procedure_item PK
                int procedure_id FK
                string item_name
                decimal price
                json meta
            }

            MEDICAL_EVALUATIONS {
                int medical_id PK
                int procedure_id FK
                int user_id FK
                int patient_id FK
                text evaluation_data
                text notes
            }

            CLINICAL_IMAGES {
                int clinical_image_id PK
                int user_id FK
                string title
                string description
                string before_image
                string after_image
            }

            USERS ||--o{ PATIENTS : registers
            USERS ||--o{ PROCEDURES : performs
            USERS ||--o{ MEDICAL_EVALUATIONS : records
            USERS ||--o{ CLINICAL_IMAGES : uploads

            PATIENTS ||--o{ PROCEDURES : has
            PATIENTS ||--o{ MEDICAL_EVALUATIONS : evaluated_in

            PROCEDURES ||--o{ PROCEDURE_ITEMS : contains
            PROCEDURES ||--|| MEDICAL_EVALUATIONS : has
        ```